# Neuro-Page

./: .gitignore  README.md  config.yaml.example  index.html  main.py  package-lock.json  pyproject.toml  robot.txt
.github/workflows/: update.yml
frontend/: index.html  robots.txt
frontend/public/: data.json
public/: data.json
scripts/: package-lock.json  package.json  updater(1).js  updater.js
