[project]
name = "neuro-page"
version = "1.0.0"
description = "Modern Python backend for Neuro-Page"
authors = [
    { name = "Moha-Master" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "croniter",
    "pytz",
    "aiofiles",
    "aiohttp-socks",
    "PyYAML",
    "audioop-lts",
    "Pillow",
    "beautifulsoup4",
    "requests",
    "discord.py"
]
license = "MIT"
